; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_search.c_look_for_overrides_r.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_search.c_look_for_overrides_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"%q+#D cannot be declared\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"  since %q+#D declared in base class\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @look_for_overrides_r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @look_for_overrides_r(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i64 @look_for_overrides_here(i64 %8, i64 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %27

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @DECL_STATIC_FUNCTION_P(i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @error(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @error(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i64 %20)
  br label %26

22:                                               ; preds = %13
  store i32 1, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @check_final_overrider(i32 %23, i64 %24)
  br label %26

26:                                               ; preds = %22, %17
  store i32 1, i32* %3, align 4
  br label %31

27:                                               ; preds = %2
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @look_for_overrides(i64 %28, i64 %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %26
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i64 @look_for_overrides_here(i64, i64) #1

declare dso_local i64 @DECL_STATIC_FUNCTION_P(i64) #1

declare dso_local i32 @error(i8*, i64) #1

declare dso_local i32 @check_final_overrider(i32, i64) #1

declare dso_local i32 @look_for_overrides(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
